infra/k8s/posts.yaml
apiVersion: v1
kind: Pod
metadata:
  name: posts
  labels:
    name: posts
spec:
  containers:
  - name: posts
    image: mustafah15/posts:0.0.1
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
