infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client-deployment
        image: mustafah15/client
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
  replicas: 1

---
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  selector:
    app: client
  ports:
  - name: client-port
    protocol: TCP
    port: 3000
    targetPort: 3000
