infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-deployment
spec:
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
      - name: moderation-deployment
        image: mustafah15/moderation
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
  replicas: 1

---
apiVersion: v1
kind: Service
metadata:
  name: moderation
spec:
  selector:
    app: moderation
  ports:
  - name: moderation-port
    protocol: TCP
    port: 4003
    targetPort: 4003
