infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deployment
spec:
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
      - name: posts-deployment
        image: mustafah15/posts
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
  replicas: 1
---
apiVersion: v1
kind: Service
metadata:
  name: posts
spec:
  selector:
    app: posts
  ports:
  - name: posts-port
    protocol: TCP
    port: 4000
    targetPort: 4000
