infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
spec:
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
      - name: query-deployment
        image: mustafah15/query
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
  replicas: 1

---
apiVersion: v1
kind: Service
metadata:
  name: query
spec:
  selector:
    app: query
  ports:
  - name: query-port
    protocol: TCP
    port: 4002
    targetPort: 4002
