infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: blog.com
      http:
        paths:
          - path: /posts
            backend:
              serviceName: posts
              servicePort: 4000
          - path: /query
            backend:
              serviceName: query
              servicePort: 4002
          - path: /comments
            backend:
              serviceName: comments
              servicePort: 4001
          - path: /?(.*)
            backend:
              serviceName: client
              servicePort: 3000
